--- a/index.Rmd
+++ b/index.Rmd
@@ -218,7 +218,7 @@ if( !file.exists("clusters9.csv") ){
 cl <- read.csv(file='clusters9.csv',header=T,sep=',')
 ```
 
-Grouping reads with max "distance" of 9 mismatches and gaps gives `r length( unique(cl$read1) )` clusters
+Grouping reads up to 9 mismatches and gaps apart (hamming distance) gives `r length( unique(cl$read1) )` clusters
 
 Cluster density diminishes slowly from center to periphery:
 
@@ -235,7 +235,7 @@ p2$guides(
     min = 0,
     max = 11,
     numticks = 11,
-    title = "distance from center"
+    title = "Hamming distance"
   ),
   y = list(
     title = ""
