--- a/index.Rmd
+++ b/index.Rmd
@@ -59,7 +59,7 @@ IIIIIIIIIHEEEHIG;<8;DIIIIG>43;//1111?9IIIIII?;66111?13?88??I???DDFFIH?<<>DIIIFDB
 
 The second line contains a sequence made of letters $A$, $C$, $G$, $T$, and sometimes $N$
 
-The forth line encodes [Phred](http://en.wikipedia.org/wiki/Phred_quality_score) quality of a measurement at each position as follows:
+The forth line encodes [Phred+33](http://en.wikipedia.org/wiki/Phred_quality_score) quality of a measurement at each position as follows:
  * convert a symbol to an ASCII code (e.g. 'I' $\rightarrow$ 73)
  * subtract 33 as ASCII alphabet starts at code 33 (e.g. Q['I'] = 73 - 33 = 40)
  * now probability of an error in a specific position is then given by $~p = 10^{-Q/10}$
@@ -118,7 +118,7 @@ Pattern frequency test is implemented in [analysis.cc](https://github.com/koskot
 
 Search for similar reads is implemented in [overlap.cc](https://github.com/koskot77/sophia/blob/master/overlaps.cc) file:
  * <span style="color:blue;">findMatches</span> preprocessing step runs for all $\mathcal{O}(N^2)$ pair combinations:
-  * [chops a reference read](https://github.com/koskot77/sophia/blob/master/overlaps.cc#L65:L69) into search patterns 
+  * [chops a reference read](https://github.com/koskot77/sophia/blob/master/overlaps.cc#L65:L69) into search patterns ($k$mers)
   * checks all other reads and remember those [firing any of the search patterns](https://github.com/koskot77/sophia/blob/master/overlaps.cc#L96)
  * <span style="color:blue;">lookCloser</span> step calculates distance defined as a penalty score of an alignment:
   * runs [full-blown sequence alignment](https://github.com/koskot77/sophia/blob/master/overlaps.cc#L142:L148) for pairs from the preprocessing step
@@ -276,7 +276,7 @@ cluster |      barcode      | frequency |
 3       | `.{0,2}GTGTCTCTA` |   21.4K   |
 4       | `.{0,2}TCAGACACG` |   21.9K   |
 
-(`.{0,2}` prefix allows any 0, 1, or 2 symbols in the beginning of a barcode) <!--, usually #1 and #3 start with `C` and #2 and #4 with 'A')-->
+(`.{0,2}` pattern allows any 0, 1, or 2 symbols; usually it is 'C' for #1,3 and 'A' for #2,4)
 
 Only about 0.5K reads are left out of these 4 major clusters
 
@@ -284,7 +284,7 @@ Only about 0.5K reads are left out of these 4 major clusters
 
 --- .class #id
 
-## What these data tells us?
+## What these data tell us?
 
 Aligning the reads to human genome reveals a targeted sequencing of these genes:
 
@@ -295,9 +295,9 @@ chr13       | BRCA2 | NM_000059 | Breast cancer 2, early onset |
 
 <br>
 
-[A simple workflow](https://usegalaxy.org/u/koskot77/w/sophia3) identifies [25](hg19vars.vcf)([48](hg38vars.vcf)) high quality variants wrt. hg19(hg38) reference genome.
+[A simple workflow](https://usegalaxy.org/u/koskot77/w/sophia3) finds [25](hg19vars.vcf) ([48](hg38vars.vcf)) high quality variants wrt. hg19 (hg38) reference genome
 
-Some of these can be found in dbSNP annotation database:
+Some of these can be found in dbSNP database:
 [rs3752451](http://www.ncbi.nlm.nih.gov/projects/SNP/snp_ref.cgi?rs=3752451),
 [rs1801406](http://www.ncbi.nlm.nih.gov/projects/SNP/snp_ref.cgi?rs=1801406),
 [rs206075](http://www.ncbi.nlm.nih.gov/projects/SNP/snp_ref.cgi?rs=206075),
@@ -311,6 +311,8 @@ Some of these can be found in dbSNP annotation database:
 [rs1799949](http://www.ncbi.nlm.nih.gov/projects/SNP/snp_ref.cgi?rs=1799949)
 
 <!-- rs206076 and rs206080 are not in #3 and rs3092994 is not in #4 -->
+
+The four barcodes identify four different individuals (check homo/heterozygosity of the variants)
 
 --- .class #id
 
